Minor spacing fix for non-project pages

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,6 +4,10 @@
     @media screen and (min-width: $breakpointAboveLarge) {
         display: flex;
     }
+
+    .content {
+        width: 100%;
+    }
 }
 
 .contentWrapper {
