--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -7,7 +7,7 @@ CONTACT
 
 .contact {
 	.contentBackground {
-		margin: 0 $spacing;
+		margin: 0 $spacing $spacing;
 		background-image: url("https://res.cloudinary.com/alisonkhall/image/upload/v1613951882/ArchitraveDesign/6-Contact/HoggsHollowTraditional-4-Background_odujg8.jpg");
 		@include backgroundSize(cover);
 		background-position: 100% 0%;
@@ -18,7 +18,7 @@ CONTACT
 		}
 
 		@media screen and (max-width: $breakpointSmall) {
-			margin: 0 $mobileSpacing;
+			margin: 0 $mobileSpacing $mobileSpacing;
 		}
 	}
 	.textBlurb {
